# greenpass_qrcode_reader

./: CMakeLists.txt  README.md  main.c
include/: my_cose.h  my_greenpass.h  my_qrscan.h
src/: my_cbor.h  my_cose.h  my_greenpass.c  my_qrscan.h  my_zlib.h
src/config/: cbor_cfg.h  cose_cfg.h
